# OpenLustreStudio

./: .gitignore  Cargo.toml  LICENSE  implemenation_plan.md
crates/ol_cli/: Cargo.toml
crates/ol_cli/src/: main.rs
crates/ol_clite_emit/: Cargo.toml
crates/ol_clite_emit/src/: harness.rs  imported.rs  lib.rs  manifest.rs  monitor.rs
crates/ol_cocospec_emit/: Cargo.toml
crates/ol_cocospec_emit/src/: lib.rs
crates/ol_contract_check/: Cargo.toml
crates/ol_contract_check/src/: lib.rs
crates/ol_contract_ir/: Cargo.toml
crates/ol_contract_ir/src/: lib.rs
crates/ol_ir/: Cargo.toml
crates/ol_ir/src/: diag.rs  expr.rs  lib.rs  loader.rs  node.rs  project.rs  state_machine.rs  types.rs
crates/ol_kind2/: Cargo.toml
crates/ol_kind2/src/: lib.rs
crates/ol_lustre_emit/: Cargo.toml
crates/ol_lustre_emit/src/: lib.rs
crates/ol_sim/: Cargo.toml
crates/ol_sim/src/: lib.rs
crates/ol_stdlib/: Cargo.toml
crates/ol_stdlib/src/: block.rs  lib.rs  parser.rs
crates/ol_typecheck/: Cargo.toml
crates/ol_typecheck/src/: lib.rs
examples/release_logic/builder/: Cargo.toml
examples/release_logic/builder/src/: main.rs
examples/release_logic/imported/: crc16.yaml
examples/release_logic/inputs/: nominal.csv
examples/release_logic/model/: release_logic.json
libraries/compare/: compare.yaml
libraries/core/: and_or_not.yaml  mux_switch.yaml
libraries/math/: arithmetic.yaml  saturate.yaml
libraries/temporal/: counter.yaml  delay.yaml  falling_edge.yaml  latch.yaml  rising_edge.yaml
tests/: Cargo.toml  compound_types.rs  constants.rs  imported_operator.rs  release_logic_pipeline.rs  runtime_monitor.rs  state_machine_codegen.rs  state_machines.rs  stdlib_library.rs  stdlib_subnode_calls.rs  trace_comparison.rs  typecheck_records_enums.rs  typecheck_rules.rs
tests/src/: lib.rs
