[package]
name = "openlustre_integration_tests"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
ol_ir = { path = "../crates/ol_ir" }
ol_typecheck = { path = "../crates/ol_typecheck" }
ol_contract_check = { path = "../crates/ol_contract_check" }
ol_contract_ir = { path = "../crates/ol_contract_ir" }
ol_lustre_emit = { path = "../crates/ol_lustre_emit" }
ol_cocospec_emit = { path = "../crates/ol_cocospec_emit" }
ol_clite_emit = { path = "../crates/ol_clite_emit" }
ol_sim = { path = "../crates/ol_sim" }
ol_stdlib = { path = "../crates/ol_stdlib" }
serde_json = "1"

[lib]
path = "src/lib.rs"

[[test]]
name = "release_logic_pipeline"
path = "release_logic_pipeline.rs"

[[test]]
name = "typecheck_rules"
path = "typecheck_rules.rs"

[[test]]
name = "typecheck_records_enums"
path = "typecheck_records_enums.rs"

[[test]]
name = "compound_types"
path = "compound_types.rs"

[[test]]
name = "runtime_monitor"
path = "runtime_monitor.rs"

[[test]]
name = "imported_operator"
path = "imported_operator.rs"

[[test]]
name = "state_machines"
path = "state_machines.rs"

[[test]]
name = "state_machine_codegen"
path = "state_machine_codegen.rs"

[[test]]
name = "stdlib_library"
path = "stdlib_library.rs"

[[test]]
name = "stdlib_subnode_calls"
path = "stdlib_subnode_calls.rs"

[[test]]
name = "trace_comparison"
path = "trace_comparison.rs"
