[package]
name = "ol_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openlustre"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ol_ir = { workspace = true }
ol_contract_ir = { workspace = true }
ol_typecheck = { workspace = true }
ol_contract_check = { workspace = true }
ol_lustre_emit = { workspace = true }
ol_cocospec_emit = { workspace = true }
ol_clite_emit = { workspace = true }
ol_sim = { workspace = true }
ol_kind2 = { workspace = true }
ol_stdlib = { workspace = true }
