[package]
name = "ol_stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ol_ir = { workspace = true }
ol_contract_ir = { workspace = true }
ol_typecheck = { workspace = true }
ol_contract_check = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
